# music-buddy-voice-agent

./: .gitignore  README.md  ipc_worker_old.py  music.sqlite3  package-lock.json  requirements.txt
app/: pyproject.toml
app/model/: install.ipynb
app/src/voice_agent/: __init__.py  cli.py  ipc_worker.py  llm_hf_local.py  music_db.py  music_lib.py  requirements.txt
app/src/voice_agent/analyzer/: render.py  snippet.py
app/src/voice_agent/asr/: app.py  asr_app.py  backend_whisper.py  capture.py  postprocess.py  sinks.py  vad.py
app/src/voice_agent/client/: console_agent.py  tts_manager.py
app/src/voice_agent/skills/: analyze_code.py  music_import.py  music_player.py  music_search.py
client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/electron/: main.ts  preload.ts  tsconfig.json
client/src/: ChatWindow.tsx  index.css  main.tsx
client/src/components/: PlayerBar.tsx
